# evt.rs

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: evt.rs
examples/: basics.rs
message-db/: Dockerfile
message-db/docker-entrypoint-initdb.d/: install-message-db.sh
message_derive/: Cargo.toml
message_derive/src/: lib.rs
scripts/: build-message-db.sh  provision-db.sh
src/: clock.rs  db.rs  identity.rs  lib.rs  message_store.rs  messaging.rs  stream_name.rs
src/clock/: controls.rs
src/message_store/: controls.rs  core.rs  errors.rs  get.rs  iterate.rs  put.rs  tools.rs
src/messaging/: controls.rs  message.rs  metadata.rs  write.rs
src/messaging/controls/: message.rs  metadata.rs
src/stream_name/: controls.rs  macros.rs  segment.rs  segment_list.rs  utils.rs
