[package]
name = "evt"
description = "Event-Sourced Autonomous Services"
license = "MIT"
license-file = "LICENSE"
version = "0.0.1"
authors = ["Matt Briggs <matt@mattbriggs.net>"]
edition = "2018"

[dependencies]
log = "0.4.11"
openssl = "0.10.31"
postgres = "0.18.1"
postgres-openssl = "0.4.0"
serde = "1.0.118"
serde_json = "1.0.60"

[dev-dependencies]
env_logger = "0.8.2"
