[package]
name = "evt"
description = "Event-Sourced Autonomous Services"
license-file = "LICENSE"
version = "0.0.1"
authors = ["Matt Briggs <matt@mattbriggs.net>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
log = "0.4.11"
openssl = "0.10.31"
postgres = { version = "0.18.1", features = ["with-chrono-0_4"] }
postgres-openssl = "0.4.0"
rand = "0.8.0"
serde = "1.0.118"
serde_json = "1.0.60"
thiserror = "1.0.22"
uuid = {version = "0.8.1", features = ["serde", "v4"]}

[dev-dependencies]
env_logger = "0.8.2"
